--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,13 +1,15 @@
-version: "3.7"
+version: '3.3'
 
 services:
-  backend:
-    build:
-      dockerfile: dev.Dockerfile
-    volumes:
-      - ./backend:/backend:delegated
-    ports:
-      - "4000:4000"
-  db:
-    ports:
-      - "5432:5432"
+    backend:
+        build:
+            dockerfile: dev.Dockerfile
+        volumes:
+            - ./backend:/backend:delegated
+        ports:
+            - '4000:4000'
+            - '8080:8080'
+
+    db:
+        ports:
+            - '5432:5432'
