Add obtaining token

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,23 @@
-version: '3.3'
+version: "3.3"
 
 services:
-    db:
-        container_name: db-service-go-chat
-        image: postgres:alpine
-        environment:
-            POSTGRES_PASSWORD: root
-            POSTGRES_USER: root
-            POSTGRES_DB: go-chat
+  db:
+    container_name: db-service-go-chat
+    image: postgres:alpine
+    environment:
+      POSTGRES_PASSWORD: root
+      POSTGRES_USER: root
+      POSTGRES_DB: go-chat
 
-    backend:
-        build:
-            context: ./backend
-        container_name: backend-service-go-chat
-        environment:
-            DB_HOST: db
-            DB_PORT: 5432
-            DB_USER: root
-            DB_PASSWORD: root
-            DB_DATABASE_NAME: go-chat
-        depends_on:
-            - db
+  # backend:
+  #     build:
+  #         context: ./backend
+  #     container_name: backend-service-go-chat
+  #     environment:
+  #         DB_HOST: db
+  #         DB_PORT: 5432
+  #         DB_USER: root
+  #         DB_PASSWORD: root
+  #         DB_DATABASE_NAME: go-chat
+  #     depends_on:
+  #         - db
