--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,15 +1,15 @@
-version: '3.3'
+version: "3.3"
 
 services:
-    backend:
-        build:
-            dockerfile: dev.Dockerfile
-        volumes:
-            - ./backend:/backend:delegated
-        ports:
-            - '4000:4000'
-            - '8080:8080'
+  # backend:
+  #     build:
+  #         dockerfile: dev.Dockerfile
+  #     volumes:
+  #         - ./backend:/backend:delegated
+  #     ports:
+  #         - '4000:4000'
+  #         - '8080:8080'
 
-    db:
-        ports:
-            - '5432:5432'
+  db:
+    ports:
+      - "5432:5432"
